fixed some buttons again, overlapping css

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -41,12 +41,12 @@
   margin-bottom: 1rem;
 }
 
-button {
+/* button {
   padding: 10px 24px;
   background: #141414;
   color: #fff;
   border: none;
-}
+} */
 
 .close-modal-button {
   cursor: pointer;
